deploy/spring-boot-demo/spring-boot-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-demo
  name: spring-boot-demo
spec:
  ports:
  - name: spring-boot-demo
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: spring-boot-demo
    deploymentconfig: spring-boot-demo
