deploy/spring-boot-demo/spring-boot-demo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-boot-demo
  name: spring-boot-demo
spec:
  port:
    targetPort: spring-boot-demo
  to:
    kind: Service
    name: spring-boot-demo
